--- a/style.css
+++ b/style.css
@@ -1,41 +1,241 @@
-body
-{
-    background-color: #e8e8e8;
+*{
+    padding: 0;
+    margin: 0;
 }
-.Portfolio_Image{
-    height: 230px;
-    width: 230x;
-    ;
+body{
+    background-color: #ffe8e8;
 }
-.My_name{
-    align-items: center;
-    align-content: center;
-    text-align: center;
-    margin-bottom: 50px;
+
+
+header{
+    background-color: #000000;
+    padding: 0 10% 0 10%;
+    height: 60px;  
+    margin-bottom: 25px;
+    
     
 }
-.Navigation_Bar{
-    list-style-type: none;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: large;
+
+.navigation_bar{
+    display: flex;
+    justify-content: space-around;
+    color: aliceblue;
+}
+
+.nav_items{
     display: flex;
     justify-content: space-between;
-
+    flex-grow: 0.4;
+    padding-top: 18px;
+    font-size: larger;
+    
 
 }
-.li:first-child{
-    margin-right: auto;
-}
-.li:right{
-    margin-left: auto;
-}
-
-.link_font_color
-{
-    font-family: 'Times New Roman', Times, serif;
-    color: #000000;
+.nav_items a{
+    text-decoration: none;
+    color: aliceblue;
+    font-weight: 700;
     
 }
-*{
-    margin:7px;
+.mysignature{
+    /* float: left; */
+    padding-top: 8px;
+    font-weight: 700;
+    font-size: 30px;
+    font-style: italic;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.nav_items a:hover{
+    color: #00ffff;
+
+}
+
+
+
+
+/* Main Section */
+main{
+    padding: 0 5% 0 5%;
+}
+#about{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+#about img{
+    max-width: 300px;
+    border-radius: 50%;
+    border: 1.5px solid red;
+    margin-right: 10%;
+}
+
+#project{
+    margin-top: 25px;
+    margin-bottom: 45px;
+    /* background-color: #fff; */
+    
+}
+.python_projects{
+    background-color: #ffd87c;
+    padding-bottom: 20px;
+    border-radius: 8px;
+}
+main .heading{
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    text-decoration: underline;
+    
+}
+
+
+
+
+/* Python Project CSS*/
+.python_project_images{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.python_project_images a img{
+    max-width: 200px;
+    margin: 10px;
+    border: 2px solid black;
+    border-radius: 5px;
+    
+}
+.python_project_images a{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+
+
+}
+.python_projects h3{
+    padding-top: 45px;
+    padding-left: 65px;
+    padding-bottom: 20px;
+    font-size: larger;
+    color: #091600;
+
+}
+
+
+
+
+/* Data Science Project CSS*/
+.DataScience_project_images{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.DataScience_project_images a img{
+    max-width: 200px;
+    margin: 10px;
+    border: 2px solid black;
+    border-radius: 5px;
+    
+}
+.DataScience_project_images a{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+
+}
+.DataScience_projects h3{
+    padding-top: 45px;
+    padding-left: 65px;
+    padding-bottom: 20px;
+    font-size: larger;
+    color: #091600;
+
+}
+.DataScience_projects{
+    margin-top: 20px;
+    border-radius: 8px;
+    background-color: #c1f8ff;
+    padding-bottom: 20px;
+}
+
+
+
+
+
+/* Web Development Project CSS*/
+.WebDevelopment_project_images{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.WebDevelopment_project_images a img{
+    max-width: 200px;
+    margin: 10px;
+    border: 2px solid black;
+    border-radius: 5px;
+    
+}
+.WebDevelopment_project_images a{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+
+}
+.WebDevelopment_projects h3{
+    padding-top: 45px;
+    padding-left: 65px;
+    padding-bottom: 20px;
+    font-size: larger;
+    color: #091600;
+
+}
+.WebDevelopment_projects{
+    margin-top: 20px;
+    border-radius: 8px;
+    background-color: #94a4ff;
+    padding-bottom: 20px;
+}
+
+
+/*Skills Section CSS*/
+#skills{
+    margin: 15px;
+    background-color: #96ffc4;
+    border-radius: 8px;
+    
+}
+#skills .main_skills_heading{
+    display: flex;
+    justify-content: center;
+    text-decoration: underline;
+}
+#skills .sub_heading {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-left: 10%;
+}
+/* .name_of_technical_skills{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;   
+} */
+/* .name_of_technical_skills a{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+} */
+.name_of_technical_skills a img{
+    max-width: 100px;
+    border: 1px solid #121212;
+    border-radius: 4px;
 }
