--- a/style.css
+++ b/style.css
@@ -101,6 +101,8 @@ main .heading{
 }
 .python_project_images a img{
     max-width: 200px;
+    min-width: 200px;
+    min-height: 200px;
     margin: 10px;
     border: 2px solid black;
     border-radius: 5px;
@@ -111,6 +113,8 @@ main .heading{
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
+    color: #091600;
+    text-decoration: none;
 
 
 }
@@ -145,6 +149,8 @@ main .heading{
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
+    color: #091600;
+    text-decoration: none;
 
 }
 .DataScience_projects h3{
@@ -185,6 +191,8 @@ main .heading{
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
+    color: #091600;
+    text-decoration: none;
 
 }
 .WebDevelopment_projects h3{
@@ -207,35 +215,5 @@ main .heading{
 #skills{
     margin: 15px;
     background-color: #96ffc4;
-    border-radius: 8px;
-    
-}
-#skills .main_skills_heading{
-    display: flex;
-    justify-content: center;
-    text-decoration: underline;
-}
-#skills .sub_heading {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding-left: 10%;
-}
-/* .name_of_technical_skills{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;   
-} */
-/* .name_of_technical_skills a{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-} */
-.name_of_technical_skills a img{
-    max-width: 100px;
-    border: 1px solid #121212;
-    border-radius: 4px;
+    border-radius: 8px;    
 }
