--- a/style.css
+++ b/style.css
@@ -213,7 +213,105 @@ main .heading{
 
 /*Skills Section CSS*/
 #skills{
-    margin: 15px;
+    margin-bottom: 45px;
+}
+.name_of_technical_skills{
     background-color: #96ffc4;
-    border-radius: 8px;    
+    
+    padding: 4% 10% 4% 2%;    
+}
+.name_of_technical_skills{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    
+    
+}
+
+.name_of_technical_skills a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 15px;
+    text-decoration: none;
+    color: #091600;
+}
+.name_of_technical_skills a img{
+    height: 200px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    border: 2px solid black;
+    
+    
+}
+.main_skills_heading {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+    text-decoration: underline;
+    margin-top: 25px;
+}
+.sub_heading{
+    background-color: #96ffc4;
+    border-radius: 8px 8px 0 0;
+}
+.sub_heading h3{
+    padding-top: 4%;
+    padding-left: 10%;
+    
+}
+
+/* Soft Skills CSS*/
+
+.name_of_soft_skills{
+    background-color: #f1a0ff;
+    border-radius: 0px 0px 8px 8px;
+    padding: 4% 10% 4% 4%;    
+}
+.name_of_soft_skills{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    
+    
+}
+
+.name_of_soft_skills a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 15px;
+    text-decoration: none;
+    color: #091600;
+}
+.name_of_soft_skills a img{
+    height: 200px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    border: 2px solid black;
+    
+    
+}
+
+
+.soft_skills_sub_heading{
+    background-color: #f1a0ff;
+    
+}
+.soft_skills_sub_heading h3{
+    padding-top: 4%;
+    padding-left: 10%;
+    
+}
+
+/* Connect Section CSS*/
+.main_connect_heading{
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+    text-decoration: underline;
 }
