--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     padding: 0;
     margin: 0;
@@ -5,6 +6,8 @@
 body{
     background-color: #000000;
     color: #f2ffd9;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: larger;
 }
 hr{
     border-top: 1px solid ;
@@ -50,7 +53,8 @@ header{
     font-weight: 700;
     font-size: 30px;
     font-style: italic;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
 }
 .nav_items a:hover{
     color: #00ffff;
